--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -21,3 +21,7 @@ deconnexion:
 consulterFicheFrais:
     path: /visiteur/consulterFicheFrais
     controller: App\Controller\VisiteurController::consulterFicheFrais
+
+renseignerFicheFrais:
+    path: /visiteur/renseignerFicheFrais
+    controller: App\Controller\VisiteurController::renseignerFicheFrais
