Fin UC4 - Valider fiche de frais

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -25,3 +25,7 @@ comptable:
 validerUneFiche:
     path: /comptable/valider
     controller: App\Controller\ComptableController::validerUneFiche
+
+erreurValidationFicheFrais:
+    path: /comptable/valider/erreur
+    controller: App\Controller\RedirectionController::erreurValidationFicheFrais
